assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Jost:wght@300&family=Lato:wght@300&family=Open+Sans:wght@300&display=swap');
*{
    margin: 0;
    padding: 0;
    border: none;
}
body {
    font-family: Jost,sans-serif;
    font-weight: 400;
    color: #3a3a3a;
}
/* headings & logo */
h1,h2 {
    font-family: Oswald,sans-serif;
    text-transform: none;
    letter-spacing: 4px;
    color:rgb(128, 77, 0);
    text-align: center;
}
#menu {
    font-size: 110%;
    letter-spacing: 4px; 
    display: flex;
    align-items: center;
    justify-content: center;
}
#menu li {
    list-style-type: none;
    margin-right: 30px;
}
#menu a {
    text-decoration: none;
    color: inherit;
}
#logo {  
    display: block;
    margin-left: auto;
    margin-right: auto;
}
.hero-image {
    background: url('../images/jon-parry-C8eSYwQkwHw-unsplash.jpg') no-repeat center center;
    background-size: cover;
    height: 60%;
    width: 100%;

}
/* main page section with some info about the club */
.main p {
    display: flex;
    align-items: center;
    justify-content: center;
    font-weight:bold;
    font-size: larger;
}
.main ul {
    justify-content: center;
    flex-direction: column;
    text-align:center;
    font-weight:bold;
    font-size: large;
}
/* map */
#map-wrapper {
    height: 300px;
}

#map {
    height: 100%;
    width: 100%;
    border: none;
}
footer {
	background-color: #364f6b;
	padding: 1em;
	text-align: center;
    width: 100%;
    position: fixed;
    bottom: 0;
    right: 0;
	z-index: 3;
}

footer > a {
	color: #fce38a;
	text-decoration: none;
	padding: 0 15px;
	font-size: 0.8rem;
}
/* Form */

.form-section {
    clear: left;
    background: url("https://codeinstitute.s3.amazonaws.com/FundamentalsProjects/HTML-CSS/formbg.jpg");
    background-size: cover;
    background-position: center;
    height: 900px;
}
.join-us-form {
    color:#fff;
    background-color: #364f6b;
    max-width: 400px;
    position:absolute;
    left:38%;
    padding:30px;
    
}
.join-us-form h2 {
    color:#fafafa;
    margin-bottom:20px;
}
.text-input {
    background: transparent;
    color:#fafafa;
    width:100%;
    height:25px;
    margin:5px 0 20px;
    border:1px solid #fafafa;
    border-radius: 2px;
}
.text-input:hover{
    border-color:#fce38a;
}
.join-button{
    margin-top:20px;
    border-radius:2px;
    padding:15px 32px 15px 32px;
    text-align:center;
    font-size:100%;
    background-color:#fce38a;
    color:#fafafa;
    
}
.join-button:hover{
    background-color:#fafafa;
    color:#f16c6b;
}

footer > p {
	color: silver;
}
@media screen and (max-width: 575px) {
    #main {
      display: block;
    }
  }

